--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.48",
     "@mui/material": "^5.0.1",
@@ -13,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "gatsby": "^4.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-mdx": "^3.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
